src/test/resources/kube/quarkus/traffic-management/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule
spec:
  host: web-app-service.quarkus.svc.cluster.local
  trafficPolicy:
    # loadBalancer:
    #   simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  # subsets:
  # - name: v1
  #   labels:
  #     version: v1
