src/test/resources/kube/quarkus/traffic-management/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus
spec:
  hosts:
  - "*"
  gateways:
  - web-app-gateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: web-app-service.quarkus.svc.cluster.local
